--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -35,73 +35,22 @@
     <section class="blog">
     	<h2 class="blog-headline"> Recent Blogs</h2>
     	<div class="blog-box">
+        <% @blogs.each do |blog| %>
    		    <div class="blog-item clearfix">
-   			    <img class="blog-image" src="img/forest.jpg">
+   			    <img class="blog-image" <% image_tag('img/forest.jpg', class: 'blog-image') %></div>
    			    <section class="blog-text">
-   				    <h3 class="blog-text-headline">
+   				    <h3 class="blog-text-headline"> <%= link_to blog.title, blog_path(blog) %></h3>
     				    <a href="single.html">
 						    Hopeful lessons from<br>
 						    the battle tp save<br>
    						    rainforests
    					    </a>
    				    </h3>
-   				    <p class="blog-date"> June 19,2017</p>
-   				    <span class="category"> Nature</span>
+   				    <p class="blog-date"> <%= blog.created_at %></p>
+   				    <span class="category"> <%= blog.category %></span>
    			    </section>
    		    </div>
-   		    <div class="blog-item clearfix">
-   			    <img class="blog-image" src="img/desert.jpg">
-   			    <section class="blog-text">
-   				    <h3 class="blog-text-headline">
-   					    <a href="single.html">
-   						    How to fight<br>
-   						    desertification and<br>
-   						    reverse climate change
-   					    </a>
-   				    </h3>
-   				    <p class="blog-date"> June 19,2017</p>
-   				    <span class="category"> Nature</span>
-   			    </section>
-   		    </div>
-   		    <div class="blog-item clearfix">
-   			    <img class="blog-image" src="img/sunset.jpg">
-   			    <section class="blog-text">
-   				    <h3 class="blog-text-headline">
-   					    <a href="single.html">
-   						    Why I'm rowing<br>
-   						    across the Pacific
-   					    </a>
-   				    </h3>
-   				    <p class="blog-date"> June 19,2017</p>
-   				    <span class="category"> Adventure</span>
-   			    </section>
-   		    </div>
-   		    <div class="blog-item clearfix">
-   			    <img class="blog-image" src="img/italy.jpg">
-   			    <section class="blog-text">
-   				    <h3 class="blog-text-headline">
-   					    <a href="single.html">
-   						    Unseen footage<br>
-   						    untamed nature
-   					    </a>
-   				    </h3>
-   				    <p class="blog-date"> June 19,2017</p>
-   				    <span class="category"> Nature</span>
-   			    </section>
-   		    </div>
-   		    <div class="blog-item clearfix">
-   			    <img class="blog-image" src="img/asia.jpg">
-   			    <section class="blog-text">
-   				    <h3 class="blog-text-headline">
-   					    <a href="single.html">
-   						    The case for<br>
-   						    engineering our food
-   					    </a>
-   				    </h3>
-   				    <p class="blog-date"> June 19,2017</p>
-   				    <span class="category"> Culture</span>
-   			    </section>
-   		    </div>
+        <% end %>
    		</div>
    	    <div class="pagination">
    		    <p>≪</p>
