--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -49,15 +49,13 @@
         </p>
       </div>
  
-      <img src="img/forest.jpg" class="single-image" alt="forest">
+      <%= image_tag "img/forest.jpg", class="single-image" %>
       <p class="single-text">
         <%= @blog.body %>
       </p>
 
       <%= link_to "編集", edit_blog_path(@blog) %>
- 
-      <a href="#">編集</a>
-      <a href="#">削除</a>
+      <%= link_to "削除", blog_path(@blog), method: :delete %>
  
       <div class="author-case clearfix">
         <div class="author-image"></div>
